--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
         "boxicons": "^2.1.4",
         "form-data": "^4.0.0",
         "pinia": "^2.1.7",
+        "vanilla-tilt-vue": "^0.1.3",
         "vue": "^3.4.21",
         "vue-router": "^4.3.0"
     },
